--- a/app/src/main/res/layout/activity_agregar_dispositivo.xml
+++ b/app/src/main/res/layout/activity_agregar_dispositivo.xml
@@ -7,46 +7,58 @@
     tools:context=".AgregarDispositivoActivity">
 
 
-    <LinearLayout
-        android:layout_width="388dp"
-        android:layout_height="407dp"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="-4dp"
-        tools:layout_editor_absoluteY="0dp">
+    <EditText
+        android:id="@+id/editText_Lugar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:ems="10"
+        android:hint="@string/app_Lugar"
+        android:inputType="textPersonName"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:id="@+id/editText_Lugar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="@string/app_Lugar"
-            android:inputType="textPersonName"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp" />
+    <EditText
+        android:id="@+id/editText_Telefono"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:autofillHints=""
+        android:ems="10"
+        android:hint="@string/app_Telefono"
+        android:inputType="phone"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText_Lugar" />
 
-        <EditText
-            android:id="@+id/editText_Telefono"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:autofillHints=""
-            android:ems="10"
-            android:hint="@string/app_Telefono"
-            android:inputType="phone"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp" />
-
-        <Button
-            android:id="@+id/button_Agregar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/app_Button" />
-
-        <ListView
-            android:id="@+id/listaLugares"
-            android:layout_width="match_parent"
-            android:layout_height="232dp">
-
-        </ListView>
-    </LinearLayout>
+    <Button
+        android:id="@+id/button_Agregar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="@string/app_Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText_Telefono"
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
