--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-    <color name="colorButton">#b7aeb1</color>
+    <color name="colorPrimary">#F48FB1</color>
+    <color name="colorPrimaryDark">#F06292</color>
+    <color name="colorAccent">#FCE4EC</color>
+    <color name="colorButton">#FF80AB</color>
 
 </resources>
